<resources>
    <string name="app_name">ChitChat</string>

    <string name="hello_world">Hello world!</string>
<string name="login_activity_title">ChitChat</string>
    <string name="login_small">Login Here</string>
    <string name="login_activity_email">Email</string>
    <string name="login_activity_password">Password</string>
    <string name="login_activity_login">login</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_contacts">Contacts</string>
    <string name="search_number">Enter the Number</string>
    <string name="search_button">Search</string>
    <string name="title_activity_contact_profile">ContactProfile</string>
    <string name="menu1_id">Menu1</string>
    <string name="menu2_id">Menu2</string>





</resources>
